[package]
name = "async-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0" }
anyhow = "1"
axum = "0.7.4"
serde = { version = "1.0.193", features = [ "derive" ] }
tracing = "0.1.40"
reqwest = { version = "0.12.1", default-features = false, features = [ "rustls-tls" ] }
parking_lot = "0.12.1"

[lints.clippy]
as_conversions = "deny"
