[package]
name = "async-loader"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45" }
anyhow = "1"
axum = "0.8.3"
serde = { version = "1.0.219", features = [ "derive" ] }
tracing = "0.1.41"
reqwest = { version = "0.12.15", default-features = false, features = [ "rustls-tls" ] }
parking_lot = "0.12.3"

[lints.clippy]
as_conversions = "deny"
